# atomic

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  atomic.db-shm  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml  test.yml
crates/atomic-cloud/src/: db.rs  error.rs  jobs.rs  models.rs
crates/atomic-core/: Cargo.toml
crates/atomic-core/src/: agent.rs  canvas_level.rs  chat.rs  clustering.rs  db.rs  embedding.rs  export.rs  extraction.rs  graph_maintenance.rs  lib.rs  manager.rs  models.rs  pipeline_task.rs  projection.rs  registry.rs  (+3 more)
crates/atomic-mcp/: Cargo.toml
crates/atomic-mcp/src/: db.rs  main.rs  server.rs
crates/atomic-server/: Cargo.toml
docs/: AGENTS.md  README.md  plan-storage-abstraction.md
docs/reference/: embedding-tagging-pipeline.md
extension/: manifest.json
extension/background/: service-worker.js
extension/popup/: popup.js
ios/: project.yml
plugins/obsidian-plugin/: manifest.json  package-lock.json  package.json  styles.css
scripts/: build-release.js  generate-changelog.js
scripts/harness/: check-blank-lines.mjs  check-list-exit.mjs
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/resources/: lembed0-x86_64.dylib
src-tauri/src/: commands.rs  compaction.rs  db.rs  lib.rs
src/hooks/: useEmbeddingEvents.ts  useInlineEditor.ts
src/lib/: EDITOR.md  api.ts  codemirror-config.ts  codemirror-rich-markdown.ts  settings.ts
src/stores/: atoms.ts  canvas.ts  chat.ts  settings.ts  tags.ts  ui.ts
src/styles/: crepe-atomic-theme.css
(+142 files in other folders)
