[package]
name = "atomic-mcp"
version = "0.1.0"
edition = "2021"
description = "Standalone MCP server for Atomic knowledge base"

[[bin]]
name = "atomic-mcp"
path = "src/main.rs"

[dependencies]
# Core library
atomic-core = { path = "../atomic-core" }

# MCP
rmcp = { version = "0.11", features = ["server", "macros", "transport-io"] }
schemars = "1.0"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "macros", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
dirs = "5"
